--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
       <artifactId>cdi</artifactId>
     </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.omnifaces/omnifaces -->
+      <dependency>
+          <groupId>org.omnifaces</groupId>
+          <artifactId>omnifaces</artifactId>
+          <version>2.6.9</version>
+      </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
